add CodeMetrics to recommended extensions

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,7 @@
     "zignd.html-css-class-completion",
     "ritwickdey.liveserver",
     "tabnine.tabnine-vscode",
-    "vscode-icons-team.vscode-icons"
+    "vscode-icons-team.vscode-icons",
+    "kisstkondoros.vscode-codemetrics"
   ]
 }
