Offline capability! Site is now a PWA!
Via Progressive Web App tech the site is now available when offline, by caching all that you need when you first load the site.

--- a/manifest.json
+++ b/manifest.json
@@ -33,7 +33,7 @@
 	"background_color": "#880000",
 	"display": "minimal-ui",
 	"scope": "/",
-	"start_url": "/",
+	"start_url": "/index.html",
 	"lang": "en-GB",
 	"dir": "auto",
 	"orientation": "any"
