--- a/manifest.json
+++ b/manifest.json
@@ -4,14 +4,16 @@
 	"description": "Where the magic happens",
 	"icons": [
 		{
+			"sizes": "192x192",
 			"src": "/images/icons-192.png",
 			"type": "image/png",
-			"sizes": "192x192"
+			"purpose": "any maskable"
 		},
 		{
+			"sizes": "512x512",
 			"src": "/images/icons-512.png",
 			"type": "image/png",
-			"sizes": "512x512"
+			"purpose": "any maskable"
 		}
 	],
 	"screenshots": [
