--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,13 @@
 			"sizes": "192x192",
 			"src": "/images/icons-192.png",
 			"type": "image/png",
-			"purpose": "any, maskable"
+			"purpose": "any maskable"
 		},
 		{
 			"sizes": "512x512",
 			"src": "/images/icons-512.png",
 			"type": "image/png",
-			"purpose": "any, maskable"
+			"purpose": "any maskable"
 		}
 	],
 	"screenshots": [
