--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,5 @@
 	"editor.insertSpaces": false,
 	"editor.detectIndentation": false,
 	"html.format.wrapLineLength": 0,
+	"editor.renderWhitespace": "all",
 }
