--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,5 @@
 	"editor.detectIndentation": false,
 	"html.format.wrapLineLength": 0,
 	"editor.renderWhitespace": "all",
+	"liveServer.settings.port": 5501,
 }
