--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,15 +1,27 @@
 {
 	"recommendations": [
 		"aaron-bond.better-comments",
-		"coenraads.bracket-pair-colorizer",
 		"aeschli.vscode-css-formatter",
-		"eamodio.gitlens",
-		"oderwat.indent-rainbow",
-		"zignd.html-css-class-completion",
-		"ritwickdey.liveserver",
-		"tabnine.tabnine-vscode",
-		"vscode-icons-team.vscode-icons",
-		"kisstkondoros.vscode-codemetrics",
+		"bibhasdn.unique-lines",
+		"CoenraadS.bracket-pair-colorizer-2",
 		"deepcode.deepcode",
+		"eamodio.gitlens",
+		"foxundermoon.shell-format",
+		"hbenl.vscode-test-explorer",
+		"jock.svg",
+		"kisstkondoros.vscode-codemetrics",
+		"mechatroner.rainbow-csv",
+		"ms-vscode.test-adapter-converter",
+		"oderwat.indent-rainbow",
+		"ritwickdey.LiveServer",
+		"sburg.vscode-javascript-booster",
+		"shd101wyy.markdown-preview-enhanced",
+		"TabNine.tabnine-vscode",
+		"timonwong.shellcheck",
+		"VisualStudioExptTeam.vscodeintellicode",
+		"vscode-icons-team.vscode-icons",
+		"waderyan.gitblame",
+		"yzhang.markdown-all-in-one",
+		"Zignd.html-css-class-completion",
 	]
 }
